# pkg/declarative/types.go
@@ -9,8 +9,8 @@ import (
 
 // Configuration declarative configuration
 type Configuration struct {
-	Endpoints []*Endpoint `json:"endpoints" validate:"dive,required"`
-	Sources   []*Source   `json:"sources" validate:"dive,required"`
+	Endpoints []*Endpoint `json:"endpoints"`
+	Sources   []*Source   `json:"sources"`
 }
 
 // Init initializes entities
@@ -39,6 +39,7 @@ func (cfg *Configuration) Init() {
 	}
 }
 
+// TODO remove
 func (cfg *Configuration) Validate() error {
 	err := utils.Validate(cfg)
 	if err != nil {
@@ -76,7 +77,7 @@ func (cfg *Configuration) Validate() error {
 
 type Endpoint struct {
 	entities.Endpoint `yaml:",inline"`
-	Plugins           []*entities.Plugin `json:"plugins" validate:"dive,required"`
+	Plugins           []*entities.Plugin `json:"plugins"`
 }
 
 func (m *Endpoint) UnmarshalJSON(data []byte) error {
@@ -90,7 +91,7 @@ func (m *Endpoint) UnmarshalJSON(data []byte) error {
 
 type Source struct {
 	entities.Source `yaml:",inline"`
-	Plugins         []*entities.Plugin `json:"plugins" validate:"dive,required"`
+	Plugins         []*entities.Plugin `json:"plugins"`
 }
 
 func (m *Source) UnmarshalJSON(data []byte) error {
